spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_on_parameter_is_an_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test(#[owo] a: bool) -> bool {true}

error: Unrecognised attribute
  ┌─ testinput:1:9
  │
1 │ fn test(#[owo] a: bool) -> bool {true}
  │         ^^^^^^ Unrecognised attribute


